--- a/css/src/_typography.scss
+++ b/css/src/_typography.scss
@@ -65,4 +65,5 @@ p {
 hr {
     border: 0;
     border-top: 1px solid rgb(var(--clr-light-800));
+    margin-top: 0;
 }
